[package]
name = "hohibe"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
readme = "README.md"
description = "Hierarchical Identity Based Encryption (HIBE) for Rust"
categories = ["mathematics", "cryptography"]
repository = "https://codeberg.org/dunj3/hohibe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
bincode = "1.3.3"
bls12_381_plus = "0.8.9"
ctr = { version = "0.9.2", features = ["alloc", "std"] }
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
sha3 = "0.10.8"
thiserror = "1.0.50"

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"

[[bench]]
name = "bbg"
harness = false
